<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReporteMovimiento">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="411dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/nro"
                android:textAlignment="center"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:text="@string/cuenta"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/monto"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>